# phoenix-mm-cli

./: Cargo.toml
src/: grpc.rs  main.rs  sample.rs  sample_market_maker.rs  utils.rs  view_state_order_book.rs
src/command/: fetch_market_event.rs  mod.rs  place_order.rs  sample.rs  sample_market_maker.rs
