[package]
name = "phoenix-mm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
rand = "0.7.3"
solana-program = "1.14.5"
solana-sdk = "1.10.32"
solana-client = "1.10.32"
solana-account-decoder = "1.14.7"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] }
bs58 = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }
bytemuck = "1.11.0"
ellipsis-client = "0.2.1"
clap = { version = "3.0.13", features = ["derive"] }
shellexpand = "2.1.2"
borsh = "0.9.3"
phoenix-v1 = { version = "0.2.4", features = [ "no-entrypoint" ]}
generic-token-faucet = "0.1.2"
phoenix-seat-manager = "0.1.0"
solana-cli-config = "1.14.7"
reqwest = "0.11.14"
serde_json = "1.0.94"
bincode = "1.3.3"
phoenix-sdk = "0.5.1"
structopt = "0.3.26"
